--- a/package.json
+++ b/package.json
@@ -11,14 +11,23 @@
   },
   "dependencies": {
     "@fal-ai/serverless-client": "^0.8.6",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@remotion/cli": "^4.0.216",
     "@remotion/player": "^4.0.216",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.11.8",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "remotion": "^4.0.216"
+    "remotion": "^4.0.216",
+    "tailwind-merge": "^2.5.3",
+    "vaul": "^1.0.0"
   },
   "devDependencies": {
+    "@shadcn/ui": "^0.0.4",
+    "@types/node": "^22.7.5",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
@@ -30,6 +39,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
   }
