added selection green outline, working before video integration

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_FAL_AI_API_KEY=a57e2f1d-a14d-4fb8-8ec2-92b1ecb42551:d14d3f16682651af76aac24b13a6a902
+VITE_LUMAAI_API_KEY=luma-92c1a880-2e38-4303-ad9a-ddb9a403430b-59e86368-addd-45e4-9401-6b333b3e00fc
