--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@fal-ai/serverless-client": "^0.8.6",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
     "@remotion/cli": "^4.0.216",
     "@remotion/player": "^4.0.216",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.8",
     "lucide-react": "^0.344.0",
+    "lumaai": "^1.1.0",
+    "node-fetch": "^2.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remotion": "^4.0.216",
